5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1709_3034.log
== TEST (2019-05-02 10:15:09) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(-4<=x<0):
	print(round(abs(x**1/2),4)
-- ERROR:
File "XXXX", line 6
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:15:30) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(-4<=x<0):
	print(round(abs(x**1/2),4))
-- ERROR:
File "XXXX", line 6
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:16:23) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(-4<=x<0):
	print(round(sqrt(abs(x),4))
-- ERROR:
File "XXXX", line 6
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:16:27) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(-4<=x<0):
	print(round(sqrt(abs(x),4)))
-- ERROR:
File "XXXX", line 6
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:16:47) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(-4<=x<0):
	print(round(sqrt(abs(x)),4))
-- ERROR:
File "XXXX", line 6
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:17:51) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)

-- ERROR:
File "XXXX", line 6
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:17:56) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)

-- ERROR:
File "XXXX", line 6
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:18:20) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)
elif(0<x<=4):
	print(sqrt(x))
-- EXECUTION TIME:
0.145716
-- TEST CASE 1:
---- input:
2.56
---- correct output:
1.6
---- user output:
1.6
-- TEST CASE 2:
---- input:
3.99
---- correct output:
1.9975
---- user output:
1.997498435543818
-- TEST CASE 3:
---- input:
-3.99
---- correct output:
1.9975
---- user output:
1.9975
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:18:24) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)
elif(0<x<=4):
	print(sqrt(x))
-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:20) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(x<4 or x>4):
	print("entrada invalida")
elif(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)
elif(0<x<=4):
	print(sqrt(x))
-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:19:24) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(x<4 or x>4):
	print("entrada invalida")
elif(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)
elif(0<x<=4):
	print(sqrt(x))
-- EXECUTION TIME:
0.160526
-- TEST CASE 1:
---- input:
2.56
---- correct output:
1.6
---- user output:
entrada invalida
-- TEST CASE 2:
---- input:
3.99
---- correct output:
1.9975
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-3.99
---- correct output:
1.9975
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:30) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(x<4 or x>4):
	print("entrada invalida")
elif(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)
elif(0<x<=4):
	print(sqrt(x))
-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:41) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(x<4 or x>4):
	print("entrada invalida")
elif(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)
elif(0<x<=4):
	print(sqrt(x))
-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:50) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(x<-4 or x>4):
	print("entrada invalida")
elif(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)
elif(0<x<=4):
	print(sqrt(x))
-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:19:56) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(x<-4 or x>4):
	print("entrada invalida")
elif(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)
elif(0<x<=4):
	print(sqrt(x))
-- EXECUTION TIME:
0.180174
-- TEST CASE 1:
---- input:
2.56
---- correct output:
1.6
---- user output:
1.6
-- TEST CASE 2:
---- input:
3.99
---- correct output:
1.9975
---- user output:
1.997498435543818
-- TEST CASE 3:
---- input:
-3.99
---- correct output:
1.9975
---- user output:
1.9975
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:30) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(x<-4 or x>4):
	print("entrada invalida")
elif(-4<=x<0):
	print(round((abs(x)**1/2),4))
elif(x==0):
	print(0)
elif(0<x<=4):
	print(sqrt(x))
-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:44) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(x<-4 or x>4):
	print("entrada invalida")
elif(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)
elif(0<x<=4):
	print(round(sqrt(x),4))
-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:46) 
-- CODE:
from math import*
x= float(input("qual seu numero x? "))

if(x<-4 or x>4):
	print("entrada invalida")
elif(-4<=x<0):
	print(round(sqrt(abs(x)),4))
elif(x==0):
	print(0)
elif(0<x<=4):
	print(round(sqrt(x),4))
-- EXECUTION TIME:
0.195791
-- TEST CASE 1:
---- input:
2.56
---- correct output:
1.6
---- user output:
1.6
-- TEST CASE 2:
---- input:
3.99
---- correct output:
1.9975
---- user output:
1.9975
-- TEST CASE 3:
---- input:
-3.99
---- correct output:
1.9975
---- user output:
1.9975
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
